--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div id="main">
-        <div class="header">
+        <div id="header">
                 <!-- begin -->
                 <ul class="nav">
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">BAND</a></li>
-                    <li><a href="">TOUR</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li id="nav-home"><a href="#">HOME</a></li>
+                    <li><a href="#band">BAND</a></li>
+                    <li><a href="#tour">TOUR</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
                     <li>
                         <a href="#">
                             MORE
@@ -32,7 +32,9 @@
                 <div class="search-bt">
                     <i class="search-icon ti-search"></i>
                 </div>
+                <i id="mobile-menu" class="ti-menu"></i>
         </div>
+        <!-- slider -->
         <div class="slider">
             <img src="assets/chicago.jpg" alt="">
             <div class="text-deconation">
@@ -40,30 +42,33 @@
                 <b class="p-text">The atmosphere in New York is lorem ipsum.</b>
             </div>
             </div>
+        <!-- content -->
         <div class="content">
-            <div class="content-section">
+            <!-- the band -->
+            <div id="band" class="content-section">
                 <h2 class="section-heading">THE BAND</h2>
                 <p class="section-sub-heading">We love music</p>
                 <p style="text-align: justify;">
                     We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
-                <div class="team">
-                    <div class="band-member">
+                <div class="row team">
+                    <div class="col col-3 band-member">
                         <p >Name</p>
                         <img class="img-band-member" src="assets/bandmember.jpg" alt="">
                     </div>
-                    <div class="band-member">
+                    <div class="col col-3 band-member">
                         <p >Name</p>
                         <img class="img-band-member" src="assets/bandmember.jpg" alt="">
                     </div>
-                    <div class="band-member">
+                    <div class="col col-3 band-member">
                         <p >Name</p>
                         <img class="img-band-member" src="assets/bandmember.jpg" alt="">
                     </div>
                 </div>
             </div>
+            <!-- tour dates -->
             <div style="background-color: black;">
-                <div class="content-section">
+                <div id="tour" class="content-section">
                     <h2 style="color: #fff;" class="section-heading">TOUR DATES</h2>
                     <p style="color: #fff;" class="section-sub-heading">Remember to book your tickets!</p>
                     <ul class="tickets-list">
@@ -71,8 +76,8 @@
                         <li>October<span class="tickets-item-sold-out">Sold out</span></li>
                         <li>November<span class="tickets-item-quality">3</span></li>
                     </ul>
-                    <div class="tour-places">
-                        <div class="tour-item">
+                    <div style="margin: 32px -8px 0;" class="row">
+                        <div class="col col-3">
                             <img src="assets/newyork.jpg" alt="" class="place-img">
                             <div class="place-content">
                                 <p><b>New York</b></p>
@@ -81,7 +86,7 @@
                                 <input class="btn-buy-tickets" type="button" value="Buy Tickets" onclick="openModal()">
                             </div>
                         </div>
-                        <div class="tour-item">
+                        <div class="col col-3">
                             <img src="assets/paris.jpg" alt="" class="place-img">
                             <div class="place-content">
                                 <p><b>Paris</b></p>
@@ -90,7 +95,7 @@
                                 <input class="btn-buy-tickets" type="button" value="Buy Tickets" onclick="openModal()">
                             </div>
                         </div>
-                        <div class="tour-item">
+                        <div class="col col-3">
                             <img src="assets/sanfran.jpg" alt="" class="place-img">
                             <div class="place-content">
                                 <p><b>San Francisco</b></p>
@@ -102,7 +107,8 @@
                     </div>
                 </div>
             </div>
-            <div class="content-section">
+            <!-- contact  -->
+            <div id="contact" class="content-section">
                 <h2 class="section-heading">CONTACT</h2>
                 <p class="section-sub-heading">Fan? Drop a note!</p>
                 <div class="row">
@@ -121,7 +127,7 @@
                                     <input  type="email" placeholder="Email" required class="form-control">
                                 </div>
                             </div>
-                            <div style="margin-top: 8px;" class="row">
+                            <div style="margin-top: 10px;" class="row">
                                 <div class="col col-full">
                                     <input type="text" placeholder="Message" required class="form-control">
                                 </div>
@@ -132,6 +138,7 @@
                 </div>
             </div>
         </div>
+        <!-- footer -->
         <div class="footer">
             <img class="map" src="assets/map.jpg" alt="">
             <div class="brand-icon">
@@ -145,6 +152,7 @@
             </div>
         </div>
     </div>
+    <!-- modal -->
     <div id="modal" class="modal">
         <div class="modal-contener">
             <div class="modal-header">
@@ -171,6 +179,27 @@
         }
         function closeModal(){
             modal.classList.remove("open-modal")
+        }
+        var header = document.getElementById("header")
+        var mobileMenu = document.getElementById('mobile-menu')
+        var headerHeight = header.clientHeight
+        var menuItems = document.querySelectorAll(".nav li a[href*='#']")
+        mobileMenu.onclick = function(){
+            if(header.clientHeight == headerHeight){
+                header.style.height = "auto"
+                for(var i=0;i<menuItems.length;i++){
+                    var menuItem = menuItems[i]
+                    menuItem.onclick = function(){
+                        var isParentMenu = this.nextElementSibling && this.nextElementSibling.classList.contains('subnav')
+                        if(!isParentMenu){
+                            header.style.height = null
+                        }
+                    }
+                }
+            }
+            else{
+                header.style.height = null
+            }
         }
     </script>
 </body>
