--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <p><b>New York</b></p>
                                 <p class="text-gray text-padding">Fri 27 Nov 2016</p>
                                 <p class="text-padding">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <input class="btn-buy-tickets" type="button" value="Buy Tickets" onclick="openModal()">
+                                <input class="btn-buy-tickets full-width" type="button" value="Buy Tickets" onclick="openModal()">
                             </div>
                         </div>
                         <div class="col col-3">
@@ -92,7 +92,7 @@
                                 <p><b>Paris</b></p>
                                 <p class="text-gray text-padding">Sat 28 Nov 2016</p>
                                 <p class="text-padding">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <input class="btn-buy-tickets" type="button" value="Buy Tickets" onclick="openModal()">
+                                <input class="btn-buy-tickets full-width" type="button" value="Buy Tickets" onclick="openModal()">
                             </div>
                         </div>
                         <div class="col col-3">
@@ -101,7 +101,7 @@
                                 <p><b>San Francisco</b></p>
                                 <p  class="text-gray text-padding">Sun 29 Nov 2016</p>
                                 <p class="text-padding">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <input  class="btn-buy-tickets" type="button" value="Buy Tickets" onclick="openModal()">
+                                <input  class="btn-buy-tickets full-width" type="button" value="Buy Tickets" onclick="openModal()">
                             </div>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                                     <input type="text" placeholder="Message" required class="form-control">
                                 </div>
                             </div>
-                            <input type="submit" class="submit-btn" value="SEND">
+                            <input type="submit" class="submit-btn full-width" value="SEND">
                         </form>
                     </div>
                 </div>
